feat: css improve and migrating to sass

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whisper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -29,7 +29,7 @@
                 </button>
                 <button type="button" class="icon-btn-messages" aria-label="Messages">
                     <i class="fa-regular fa-message"></i>
-                    <span class="dot-badge" id="messages" aria-label="New messages"></span>
+                    <span class="dot-badge" aria-label="New messages"></span>
                 </button>
                 <button type="button" class="profile-btn" aria-label="My profile">
                     <img src="res/my_profilePicture.png" alt="User photo">
@@ -54,7 +54,7 @@
                             </div>
                             <div class="contact-info">
                                 <span class="contact-name">Andrei Popescu</span>
-                                <span class="last-message">Salut! Ce mai faci?</span>
+                                <span class="last-message">Suna bine!</span>
                             </div>
                             <span class="timestamp">10:30</span>
                         </button>
@@ -115,14 +115,14 @@
                     
                     <div class="message received">
                         <div class="message-content">
-                            <p>Salut! Ce mai faci?</p>
+                            <p>Hello hello. Cum esti?</p>
                         </div>
                         <span class="message-time">10:28</span>
                     </div>
 
                     <div class="message-sent">
                         <div class="message-content">
-                            <p>Salut Andrei! Bine.</p>
+                            <p>Salut Andrei, bine.</p>
                         </div>
                         <span class="message-time">10:29</span>
                     </div>
