--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <div class="messages-container" role="log" aria-live="polite" aria-label="History">
                     
-                    <div class="message received">
+                    <div class="message-received">
                         <div class="message-content">
                             <p>Hello hello. Cum esti?</p>
                         </div>
@@ -127,7 +127,7 @@
                         <span class="message-time">10:29</span>
                     </div>
 
-                    <div class="message received">
+                    <div class="message-received">
                         <div class="message-content">
                             <p>Suna bine!</p>
                         </div>
@@ -155,6 +155,6 @@
             </main>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
