--- a/public/index.html
+++ b/public/index.html
@@ -156,5 +156,6 @@
         </div>
     </div>
     <script type="module" src="js/app.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
