feature: a lot of things

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <aside class="sidebar-history">
                 <header class="sidebar-header">
                     <h2>Recent conversations</h2>
-                    <button type="button" aria-label="New conversation">
+                    <button class="add-new-conversation" type="button" aria-label="New conversation">
                         <i class="fa-solid fa-plus"></i>
                     </button>
                 </header>
@@ -54,35 +54,9 @@
                             </div>
                             <div class="contact-info">
                                 <span class="contact-name">Andrei Popescu</span>
-                                <span class="last-message">Suna bine!</span>
+                                <span class="last-message"></span>
                             </div>
-                            <span class="timestamp">10:30</span>
-                        </button>
-                    </li>
-
-                    <li class="contact-item">
-                        <button type="button">
-                            <div class="avatar">
-                                <img src="res/person2.png" alt="">
-                            </div>
-                            <div class="contact-info">
-                                <span class="contact-name">Maria Ionescu</span>
-                                <span class="last-message">Ok</span>
-                            </div>
-                            <span class="timestamp">Ieri</span>
-                        </button>
-                    </li>
-                    
-                    <li class="contact-item">
-                        <button type="button">
-                            <div class="avatar">
-                                <img src="res/person3.png" alt="">
-                            </div>
-                            <div class="contact-info">
-                                <span class="contact-name">Echipa proiect</span>
-                                <span class="last-message">Meeting la ora 14:00.</span>
-                            </div>
-                            <span class="timestamp">Lun</span>
+                            <span class="timestamp"></span>
                         </button>
                     </li>
                 </ul>
@@ -93,7 +67,7 @@
                     <div class="chat-partner-info">
                         <img src="res/person1.png" alt="" aria-hidden="true">
                         <div>
-                            <h2>Andrei Popescu</h2>
+                            <h2 class="principal-contact-name">Andrei Popescu</h2>
                             <span class="status online" aria-label="Status: Online">Online</span>
                         </div>
                     </div>
